--- a/src/main/resources/templates/shop-details.html
+++ b/src/main/resources/templates/shop-details.html
@@ -1,8 +1,8 @@
+<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-
 <head>
     <meta charset="UTF-8">
-    <title>Book and Shop</title>
+    <title>Shop Details</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
@@ -28,26 +28,38 @@
     </div>
 </nav>
 <div class="container">
-
-    <hr/>
-
-    <h3>Add New Shop</h3>
-    <hr/>
-
-    <form th:action="@{/saveShop}" th:object="${shop}" method="POST">
-
-        <input type="text" th:field="*{name}" class="form-control col-4 mb-4" placeholder="Enter Name"/>
-
-        <input type="text" th:field="*{address}" class="form-control col-4 mb-4" placeholder="Enter Address"/>
-
-        <button type="submit" class="btn btn-primary col-2">Save</button>
-
-        <input type="hidden" th:field="*{id}"/>
-
+    <h1 th:text="${shop.name} + ' Book Inventory'"></h1>
+    <table class="table table-bordered table-striped" id="bookTable">
+        <thead>
+        <tr>
+            <th>Name</th>
+            <th>Author</th>
+            <th>Genre</th>
+            <th>Salary</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="book : ${books}">
+            <td th:text="${book.name}" />
+            <td th:text="${book.author}" />
+            <td th:text="${book.genre}" />
+            <td th:text="${book.salary}" />
+        </tr>
+        </tbody>
+    </table>
+    <h2>Add Existing Book</h2>
+    <form th:action="@{/addExistingBookToShop}" method="post">
+        <input type="hidden" name="shopId" th:value="${shop.id}">
+        <div class="mb-3">
+            <label for="book" class="form-label">Select Book:</label>
+            <select id="book" name="bookId" class="form-select" required>
+                <option th:each="book : ${allBooks}" th:value="${book.id}" th:text="${book.name + ' by ' + book.author}"></option>
+            </select>
+        </div>
+        <button type="submit" class="btn btn-primary">Add Book</button>
     </form>
-    <hr/>
-    <a th:href="@{/list-shops}">Back to list</a>
-</div>
 
+    <a th:href="@{/list-shops}" class="btn btn-secondary">Back to Shops</a>
+</div>
 </body>
 </html>
